
Moqui Framework 1.6.2 is a minor new feature and bug fix release.

TODO

Non Backward Compatible Changes

- Removed the TenantCurrency, TenantLocale, TenantTimeZone, and
  TenantCountry entities; they aren't generally used and better not to have
  business settings in these restricted technical config entities

New Features

- Performance improvements based on profiling, entity find one with and
  without cache about 3x faster (on H2, cached finds will have same
  increase regardless of database, other databases will see less app server
  load but DB speeds vary more); other entity and service operations are
  faster and screen rendering marginally faster
- UserAccount.userId and various other ID fields changed from id-long to id
  as userId is only an internal/sequenced ID now, and for various others
  the 40 char length changed years ago is more than adequate; existing
  columns can be updated for the shorter length, but don't have to be
- Changes to run tests without example component in place (now a component
  separate from moqui-runtime), using the moqui.test and other entities
- Added run-jackrabbit option to run Apache Jackrabbit locally when Moqui
  starts and stop is when Moqui stops, with conf/etc in runtime/jackrabbit
- Added SubscreensDefault entity and supporting code to override default
  subscreens by tenant and/or condition with database records
- Now using the VERSION_2_3_23 version for FreeMarker instead of a
  previous release compatibility version
- Added methods to L10nFacade that accept a Locale when something other
  than the current user's locale is needed
- Multi Tenant
  - Entity find and CrUD operations for entities in the tenantcommon group
    are restricted to the DEFAULT instance, protects REST API and so on
    regardless of admin permissions a tenant admin might assign
  - Added tenants allowed on SubscreensItem entity and subscreens-item
    element, makes more sense to filter apps by tenant than in screen