@@ -13,6 +13,8 @@
  */
 package org.moqui.impl.webapp
 
+import groovy.transform.CompileStatic
+
 import javax.servlet.ServletContext
 import javax.servlet.ServletContextEvent
 import javax.servlet.ServletContextListener
@@ -26,6 +28,7 @@ import org.moqui.Moqui
 import org.slf4j.Logger
 import org.slf4j.LoggerFactory
 
+@CompileStatic
 class MoquiContextListener implements ServletContextListener {
 
     protected static String getId(ServletContext sc) {
@@ -38,19 +41,31 @@ class MoquiContextListener implements ServletContextListener {
             ServletContext sc = servletContextEvent.servletContext
             String webappId = getId(sc)
             String moquiWebappName = sc.getInitParameter("moqui-name")
-            String webappRealPath = sc.getRealPath("/")
 
             // before we init the ECF, see if there is a runtime directory in the webappRealPath, and if so set that as the moqui.runtime System property
-            if (new File(webappRealPath + "/runtime").exists()) System.setProperty("moqui.runtime", webappRealPath + "/runtime")
+            String webappRealPath = sc.getRealPath("/")
+            String embeddedRuntimePath = webappRealPath + "/runtime"
+            if (new File(embeddedRuntimePath).exists()) System.setProperty("moqui.runtime", embeddedRuntimePath)
 
             ExecutionContextFactory ecfi = new ExecutionContextFactoryImpl()
+
+            Logger logger = LoggerFactory.getLogger(MoquiContextListener.class)
+            logger.info("Loading Moqui Webapp at [${webappId}], moqui webapp name [${moquiWebappName}], context name [${sc.getServletContextName()}], located at [${webappRealPath}]")
+
+            // check for an empty DB
+            if (ecfi.checkEmptyDb()) {
+                logger.warn("Data loaded into empty DB, re-initializing ExecutionContextFactory")
+                // destroy old ECFI
+                ecfi.destroy()
+                // create new ECFI to get framework init data from DB
+                ecfi = new ExecutionContextFactoryImpl()
+            }
+
+            // set SC attribute and Moqui class static reference
             sc.setAttribute("executionContextFactory", ecfi)
             // there should always be one ECF that is active for things like deserialize of EntityValue
             // for a servlet that has a factory separate from the rest of the system DON'T call this (ie to have multiple ECFs on a single system)
             Moqui.dynamicInit(ecfi)
-
-            Logger logger = LoggerFactory.getLogger(MoquiContextListener.class)
-            logger.info("Loading Moqui Webapp at [${webappId}], moqui webapp name [${moquiWebappName}], context name [${sc.getServletContextName()}], located at [${webappRealPath}]")
 
             // run after-startup actions
             WebappInfo wi = ecfi.getWebappInfo(moquiWebappName)
