@@ -17,6 +17,14 @@ Non Backward Compatible Changes
 
 New Features
 
+- Added tools.@empty-db-load attribute with data file types to load on
+  startup (through webapp ContextListener init only) if the database is
+  empty (no records for moqui.basic.Enumeration)
+- If the moqui.conf property (system property, command line, or in
+  MoquiInit.properties) starts with a forward slash ('/') it is now
+  considered an absolute path instead of relative to the runtime directory
+  allowing a conf file outside the runtime directory (an alternative
+  to using ../)
 - Performance improvements based on profiling, entity find one with and
   without cache about 3x faster (on H2, cached finds will have same
   increase regardless of database, other databases will see less app server
